data/derived/sp14/progs/unify/prog1685.ml.out
Characters 26-33:
  let _ = List.fold_left(+) [1;2;3] 0;;
                            ^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
